--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -33,7 +33,7 @@ on:
 env:
   AWS_REGION: us-east-1
   ECR_REPOSITORY: manki
-  ECS_SERVICE: manki
+  ECS_SERVICE: manki-service
   ECS_CLUSTER: dev
   ECS_TASK_DEFINITION: .aws/task-definition.json
   CONTAINER_NAME: manki
