--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,6 @@
-DB_DSN=/db/manki.db
-DB_DRIVER_NAME="sqlite3"
+DB_DSN=root:123456@tcp(db:3307)/manki
+DB_DRIVER_NAME="mysql"
+MYSQL_USER=myuser
+MYSQL_ROOT_PASSWORD=123456
+MYSQL_DATABASE=manki
 PORT=3000
